--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "halfway",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
