--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^4.5.0",
     "@rails/webpacker": "3.5",
+    "@turf/circle": "^6.0.1",
+    "@turf/turf": "^5.1.6",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.5.0",
