--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.5.0",
+    "mapbox-gl-circle": "^1.6.5",
     "places.js": "^1.17.0",
     "popper.js": "^1.16.0"
   },
