--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "mapbox-gl": "^1.5.0",
     "mapbox-gl-circle": "^1.6.5",
     "places.js": "^1.17.1",
-    "popper.js": "^1.16.0"
+    "popper.js": "^1.16.0",
+    "typed.js": "^2.0.11"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
